# csm-sentinel

./: .dockerignore  .env.sample  .env.sample.ethereum  .env.sample.holesky  .env.sample.hoodi  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose-ethd.yml  docker-compose.yml  pyproject.toml  ruff.toml  ty.toml
.github/workflows/: copilot.yml  docker-publish.yml  lint.yml
abi/: CSAccounting.json  CSAccountingV2.json  CSExitPenalties.json  CSFeeDistributor.json  CSFeeDistributorV2.json  CSModule.json  CSParametersRegistry.json  VEBO.json
src/csm_bot/: config.py  events.py  jobs.py  main.py  models.py  module_types.py  rpc.py  texts.py  utils.py
src/csm_bot/app/: __init__.py  bootstrap.py  context.py  contracts.py  module_adapter.py  runtime.py  storage.py
src/csm_bot/handlers/: __init__.py  errors.py  start.py  state.py  tracking.py  utils.py
src/csm_bot/handlers/admin/: __init__.py  broadcast.py  common.py  menu.py
src/csm_bot/services/: __init__.py  subscription.py
src/tests/: conftest.py  test_config.py  test_contracts.py  test_events.py  test_jobs.py  test_misc_units.py  test_module_types.py  test_subscription.py  test_texts_event_list.py  test_utils.py  test_utils_block_number.py
src/tests/app/: test_module_adapter.py  test_storage.py
src/tests/integration/: conftest.py  helpers.py  test_telegram_subscription.py
