[project]
name = "csm-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "web3>=7.12.0",
    "python-telegram-bot[rate-limiter,job-queue]>=21.4",
    "python-dotenv",
    "tqdm>=4.66.5",
    "aiogram>=3.12.0",
    "pytest-asyncio>=1.1.0",
    "async-lru>=2.0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
]
