[project]
name = "csm-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "web3>=7.12.0",
    "python-telegram-bot[rate-limiter,job-queue]>=21.4",
    "python-dotenv",
    "tqdm>=4.66.5",
    "aiogram>=3.12.0",
    "pytest-asyncio>=1.1.0",
    "async-lru>=2.0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
cache-dir = ".uv-cache"
dev-dependencies = [
    "pytest>=8.3.4",
    "pytest-xdist>=3.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
markers = [
    "integration: mark tests that require a local Anvil fork",
]
